# close2gl

./: .gitignore  CMakeLists.txt  Camera.cpp  README.md  Window.cpp  main.cpp
.cache/clangd/index/: Camera.cpp.E87B60DABBEA275E.idx  Camera.h.811EB3B95D0459EB.idx  Renderer.cpp.C3D3BBE797C1EF6A.idx  Renderer.cpp.E1B1C0CE3964DDFB.idx  Renderer.h.236A0CDC00F388BA.idx  Renderer.h.5706B8E6FCC2E7ED.idx  Window.cpp.65E60896871E328A.idx  Window.h.9439D06AE5B780A2.idx  _fixes.hpp.71279AD00EF97FF9.idx  _vectorize.hpp.A5F5EB863E19C608.idx  common.hpp.89BE3CBB5050EFDB.idx  compute_common.hpp.EA030F02CC102D3F.idx  compute_vector_relational.hpp.45BA1E429B5EF139.idx  constants.hpp.C36CF098EC57528D.idx  constants.inl.1D95DBF69E75EDE4.idx  epsilon.hpp.2A653F210CADB990.idx  epsilon.inl.24A0403C681D8ABB.idx  exponential.hpp.2DF37444BA693CB3.idx  func_common.inl.B8D5F26F4E34C17A.idx  func_exponential.inl.AF1CD3195AE31032.idx  func_geometric.inl.98E68141EC40C47B.idx  func_integer.inl.EFDCCCB92ACDEBFC.idx  func_matrix.inl.6CF7BB8665B163D4.idx  func_packing.inl.7231AE4C4F4DE620.idx  func_trigonometric.inl.6571D900A8D8A7C3.idx  func_vector_relational.inl.95EE7ED16DC47482.idx  fwd.hpp.990C2602A935D9B9.idx  geometric.hpp.B275D70F0CD75590.idx  glad.c.62E5D7B9BDC733D7.idx  glad.c.BD305910E08DF501.idx  (+167 more)
data/: shark.fbx
include/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  Camera.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  main.cpp
src/application/: InterfaceWindow.cpp  InterfaceWindow.h  Menu.cpp  Menu.h  RenderingWindow.cpp  RenderingWindow.h  SettingsToolbox.cpp  SettingsToolbox.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
src/close2GL/: Close2GL.cpp  Close2GL.h  Close2GLClass.cpp  Close2GLClass.h  ColorBuffer.cpp  ColorBuffer.h  DepthBuffer.cpp  DepthBuffer.h  Rasterizer.cpp  Rasterizer.h  Shader.cpp  Shader.h
src/openGL/: glad.c
src/renderer/: Camera.cpp  Camera.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Settings.cpp  Settings.h  ShadingMethod.cpp  ShadingMethod.h  ShadingMode.cpp  ShadingMode.h
(+24 files in other folders)
